Clean up, visualization improvement, simplified zone crop and compare against landmarks

--- a/Multi_Mesh_Definitions.ipynb
+++ b/Multi_Mesh_Definitions.ipynb
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -799,15 +799,32 @@
     "        brp=self.mesh.vertices[self.mesh.browRidgeIndex]\n",
     "        rep=self.mesh.vertices[self.mesh.rightEarIndex]\n",
     "        lep=self.mesh.vertices[self.mesh.leftEarIndex]\n",
+    "        cent=self.mesh.vertices[self.mesh.browRidgeIndex]\n",
+    "        left=self.mesh.vertices[self.mesh.rightEarIndex]\n",
+    "        right=self.mesh.vertices[self.mesh.leftEarIndex]\n",
     "        planeNormal=np.cross(rep-brp,lep-brp)\n",
     "        abovePlane=np.sum((self.mesh.vertices-brp)*planeNormal,axis=1)<-5.0\n",
     "\n",
+    "        centerP=np.array([0.0,1.0,0.4])\n",
+    "        rightP=np.array([-1.0,0.0,0.0])\n",
+    "        leftP=np.array([1.0,0.0,0.0])\n",
+    "        planeNormal=np.cross(rightP-centerP,leftP-centerP)\n",
+    "        abovePlaneSimp=np.sum((self.mesh.vertices)*planeNormal,axis=1)>20.0\n",
+    "        \n",
     "        earY=(rep[1]+lep[1])/2\n",
-    "        inFront=self.mesh.vertices[:,1]>earY\n",
+    "        maxZInd=np.argmax(self.mesh.vertices[:,2])\n",
+    "        yOfMaxZ=self.mesh.vertices[maxZInd,1]\n",
+    "        \n",
+    "        aboveSimple = self.mesh.vertices[:,2]<0\n",
+    "        #inFront=self.mesh.vertices[:,1]>earY\n",
+    "        inFront=self.mesh.vertices[:,1]>yOfMaxZ\n",
+    "\n",
     "        \n",
     "        ##DYLAN FOR NOW USE ENTIRE PLANE, NOT JUST ANGLES\n",
-    "        finalCropIndices=np.logical_and(abovePlane,inFront)\n",
+    "        #finalCropIndices=np.logical_and(abovePlane,inFront)\n",
+    "        finalCropIndices=np.logical_and(abovePlaneSimp,inFront)\n",
     "\n",
+    "        \n",
     "        return finalCropIndices\n",
     "        \n",
     "    def backRegionVertices(self):\n",
@@ -822,11 +839,25 @@
     "        abovePlane=np.sum((self.mesh.vertices-brp)*planeNormal,axis=1)<-5.0\n",
     "\n",
     "        earY=(rep[1]+lep[1])/2\n",
-    "        inBack=self.mesh.vertices[:,1]<earY\n",
+    "        maxZInd=np.argmax(self.mesh.vertices[:,2])\n",
+    "        yOfMaxZ=self.mesh.vertices[maxZInd,1]\n",
+    "        \n",
+    "        aboveSimple = self.mesh.vertices[:,2]>0\n",
+    "        #inBack=self.mesh.vertices[:,1]<earY\n",
+    "        inBack=self.mesh.vertices[:,1]<yOfMaxZ\n",
+    "\n",
+    "        \n",
+    "        \n",
+    "        centerP=np.array([0.0,1.0,0.4])\n",
+    "        rightP=np.array([-1.0,0.0,0.0])\n",
+    "        leftP=np.array([1.0,0.0,0.0])\n",
+    "        planeNormal=np.cross(rightP-centerP,leftP-centerP)\n",
+    "        abovePlaneSimp=np.sum((self.mesh.vertices)*planeNormal,axis=1)>20.0\n",
     "        \n",
     "        ##DYLAN FOR NOW USE ENTIRE PLANE, NOT JUST ANGLES\n",
-    "        finalCropIndices=np.logical_and(abovePlane,inBack)\n",
-    "\n",
+    "        #finalCropIndices=np.logical_and(abovePlane,inBack)\n",
+    "        finalCropIndices=np.logical_and(abovePlaneSimp,inBack)\n",
+    "        \n",
     "        return finalCropIndices\n"
    ]
   },
@@ -932,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
