--- a/Summary_FuturePlans.ipynb
+++ b/Summary_FuturePlans.ipynb
@@ -29,6 +29,11 @@
     "- Difficult to separate noise from signal\n",
     "\n",
     "\n",
+    "\n",
+    "---\n",
+    "\n",
+    "\n",
+    "\n",
     "## Next Steps - Classical Machine Learning\n",
     "\n",
     "- Able to automatically find unexepcted trends within the dataset\n",
@@ -54,6 +59,10 @@
     "- Clustering could also be used to create mesh partitions for comparison\n",
     "\n",
     "<img src=\"Images/kmeans.png\" alt=\"K-Means Clustering - Classical Unsupervised Machine Learning\" width=\"500\"/>\n",
+    "\n",
+    "\n",
+    "\n",
+    "---\n",
     "\n",
     "\n",
     "\n",
@@ -84,7 +93,7 @@
     "- Some GAN models can be parameterized/constrained to produce new examples with desired features\n",
     "- GANs could potentially be used to produce new 3D meshes of surgical outcome predictions, or cranial development if no operation is performed\n",
     "\n",
-    "<img src=\"Images/convolutional_neural_network.png\" alt=\"Convolutional Neural Network\" width=\"600\"/>\n"
+    "<img src=\"Images/GAN.png\" alt=\"Generative Adversarial Network\" width=\"600\"/>\n"
    ]
   },
   {
